--- a/hcanhab2_mqtt/xsl/Makefile
+++ b/hcanhab2_mqtt/xsl/Makefile
@@ -3,8 +3,10 @@ generateHabHcan:
 
 cleanHabHcan:
 	rm -f ../generated/*
+	rm -f ../generated
 
 HabHcan.sitemap: mk_HabHcan_sitemap.xsl $(HCAN_INSTALLATION)
+	mkdir -p ../generated
 	xalan -in $(HCAN_INSTALLATION) -xsl mk_HabHcan_sitemap.xsl > ../generated/HabHcanDyn.sitemap
 	cat ../generated/HabHcanDyn.sitemap ../staticConfigurations/conf_templates/staticPart.sitemap > ../generated/hcan_cat.sitemap
 	echo "} // Endeklammer der Gesamtsitemap (dyn.+ statische Anteile)" >> ../generated/hcan_cat.sitemap
