--- a/hcanhab2_mqtt/MakefileDefines.inc
+++ b/hcanhab2_mqtt/MakefileDefines.inc
@@ -1,9 +1,7 @@
-CONF = /home/il/Dropbox/HCAN/HI_SERVER/openhab2_conf_mqtt
+CONF = /home/ingo/Dropbox/HCAN/HI_SERVER/openhab2_conf_mqtt
 include $(CONF)/myconf.inc
 
 OPENHABVERSION = openhab-2.1.0
-#HCAN_INSTALLATION = installation_Test.xml
-#HCAN_INSTALLATION = installation_Test_Lens.xml
 HCAN_INSTALLATION = installation.xml
 
 
@@ -11,7 +9,7 @@ HCAN_INSTALLATION = installation.xml
 ZIEL_PC = bananapi
 
 ifeq ($(ZIEL_PC),localhost)
-	ZIEL_USER = il
+	ZIEL_USER = ingo
 else ifeq  ($(ZIEL_PC),bananapi)
 	ZIEL_USER = tt
 endif
@@ -19,7 +17,5 @@ endif
 # nicht veraendern: 
 ZIEL_ORDNER = myOpenHabInstallation
 
-########################
-_SSH = sshpass -p $(PT) ssh -t
-_SCP = sshpass -p $(PT) scp -r
-SCP_ZIEL_DIR = $(ZIEL_USER)@$(ZIEL_PC):/home/$(ZIEL_USER)/$(ZIEL_ORDNER)
+_SSH = sudo sshpass -p $(PT) ssh -t
+_SCP = sudo sshpass -p $(PT) scp -r
