--- a/hcanhab2_mqtt/localhost/Makefile
+++ b/hcanhab2_mqtt/localhost/Makefile
@@ -1,10 +1,11 @@
 # localhost
+#
 include $(HCANHAB_DIR)/MakefileDefines.inc
 
 all:
 	make cleanZielOrdner
 	make unzip_openhab_installation
-	make mv to=/home/$(ZIEL_USER)/$(ZIEL_ORDNER)
+	make moveIt OHInstZiel=/home/$(ZIEL_USER)/$(ZIEL_ORDNER)
 	@#
 	cd $(HCANHAB_DIR); make installHabHcan
 
@@ -15,23 +16,13 @@ unzip_openhab_installation:
 	mkdir -p $(OPENHABDOWNLOADS_DIR)/tempinst
 	unzip -u $(OPENHABDOWNLOADS_DIR)/$(OPENHABVERSION).zip \
 		-d $(OPENHABDOWNLOADS_DIR)/tempinst
-	
-mv:
-	$(_SSH) $(ZIEL_USER)@$(ZIEL_PC) mkdir -p $(to)
-	$(_SCP) $(OPENHABDOWNLOADS_DIR)/tempinst/* $(ZIEL_USER)@$(ZIEL_PC):$(to)
+
+moveIt:
+	$(_SSH) $(ZIEL_USER)@$(ZIEL_PC) mkdir -p $(OHInstZiel)
+	$(_SCP) $(OPENHABDOWNLOADS_DIR)/tempinst/* $(ZIEL_USER)@$(ZIEL_PC):$(OHInstZiel)
 	rm -f -R $(OPENHABDOWNLOADS_DIR)/tempinst
-	
-	
-reboot:
-	# keine Funktion
 
 start: 
 	make stop
 	sh /home/$(ZIEL_USER)/$(ZIEL_ORDNER)/start.sh
 	@# sh /home/$(ZIEL_USER)/$(ZIEL_ORDNER)/start_debug.sh
-
-stop: 
-	# sh /home/$(ZIEL_USER)/$(ZIEL_ORDNER)/pskill
-
-state:
-	# keine Funktion	
