kleine Anpassungen fuer hcanHab

--- a/hcanhab2_mqtt/Makefile
+++ b/hcanhab2_mqtt/Makefile
@@ -14,7 +14,7 @@ run_webclient:
 
 ########################
 clean:
-	rm -f ./staticConfigurations/conf_templates/*
+	rm -fR ./staticConfigurations/conf_templates
 	cd xsl; make cleanHabHcan
 
 generateHabHcan: 
