Wegen der besseren Kompatibilitaet gcc statt clang verwendet

--- a/hcan4mqttpc/Makefile
+++ b/hcan4mqttpc/Makefile
@@ -4,7 +4,7 @@ TARGET = hcan4mqttpc
 SRC = $(patsubst %.c, %.c , $(wildcard *.c))
 SRC += $(patsubst %.c, %.c , $(wildcard ./MQTTPacket/src/*.c))
 
-CXX = clang
+CXX = gcc
 
 CFLAGS  = -I. -Wall -g -Os
 CFLAGS += -DDEBUG
