--- a/firmwares/usv-modul/Makefile
+++ b/firmwares/usv-modul/Makefile
@@ -11,9 +11,9 @@ TARGET  = main
 OBJCOPY = avr-objcopy
 CXX     = avr-gcc
 
-ifeq ($(MCU),atmega328)
+ifeq ($(MCU),atmega328p)
 	F_CPU = 16000000
-else # MCU_atmega32 || MCU_atmega644
+else # MCU_atmega32 || MCU_atmega644p
 	F_CPU = 3686400
 endif
 
