--- a/hcanhab2_mqtt/xsl/Makefile
+++ b/hcanhab2_mqtt/xsl/Makefile
@@ -6,9 +6,10 @@ cleanHabHcan:
 
 HabHcan.sitemap: mk_HabHcan_sitemap.xsl $(HCAN_INSTALLATION)
 	mkdir -p ../generated
-	xalan -in $(HCAN_INSTALLATION) -xsl mk_HabHcan_sitemap.xsl > ../generated/HabHcanDyn.sitemap
-	cat ../generated/HabHcanDyn.sitemap ../staticConfigurations/conf_templates/staticPart.sitemap > ../generated/hcan_cat.sitemap
-	echo "} // Endeklammer der Gesamtsitemap (dyn.+ statische Anteile)" >> ../generated/hcan_cat.sitemap
+	xalan -in $(HCAN_INSTALLATION) -xsl mk_HabHcan_sitemap.xsl                                     > ../generated/HabHcanDyn.sitemap
+	cat ../generated/HabHcanDyn.sitemap ../staticConfigurations/conf_templates/staticPart.sitemap  > ../generated/hcan_cat.sitemap
+	less ../staticConfigurations/fix/conf/static_general.sitemap                                  >> ../generated/hcan_cat.sitemap
+	echo "} // Endeklammer der Gesamtsitemap (dyn.+ statische Anteile)"                           >> ../generated/hcan_cat.sitemap
 	cd ../generated/; rm -f HabHcanDyn.sitemap
 
 
