--- a/pi/Systemd/hcan.service
+++ b/pi/Systemd/hcan.service
@@ -5,7 +5,7 @@ Description=OpenHCAN: Homeautomation CAN (Systemd)
 Type=forking
 GuessMainPID=yes
 ExecStart=/home/tt/startHcanDienste.sh
-ExecStop=/usr/bin/kill -SIGKILL $MAINPID
+ExecStop=/bin/kill -SIGKILL $MAINPID
 ExecStopPost=
 User=tt
 Group=daemon
