--- a/hcanhab2_mqtt/bananapi/Systemd/openhab.service
+++ b/hcanhab2_mqtt/bananapi/Systemd/openhab.service
@@ -1,17 +1,18 @@
 [Unit]
-Description=Starts and stops the openHAB Home Automation Bus
-Documentation=http://www.openhab.org
+Description=The openHAB 2 Home Automation Bus Solution
+Documentation=http://docs.openhab.org
 Wants=network-online.target
 After=network-online.target
 
 [Service]
 Type=simple
-GuessMainPID=yes
 User=tt
-ExecStart=/home/tt/myOpenHabInstallation/start.sh
-ExecStop=kill -SIGINT $MAINPID
-Restart=on-failure
+GuessMainPID=yes
 WorkingDirectory=/home/tt/myOpenHabInstallation
+#EnvironmentFile=/etc/default/openhab2
+ExecStart=/home/tt/myOpenHabInstallation/start.sh server
+ExecStop=/bin/kill -SIGINT $MAINPID
+Restart=on-failure
 
 [Install]
 WantedBy=multi-user.target
