Anpassungen bei der Umstellung auf OpenHab 2.3

--- a/hcanhab2_mqtt/BeispielKonfiguration/addons.cfg
+++ b/hcanhab2_mqtt/BeispielKonfiguration/addons.cfg
@@ -15,14 +15,13 @@ ui = basic,paper
 persistence = 
 
 # A comma-separated list of actions to install (e.g. "mail,pushover")
-action = nma
+action = pushover
 
 # A comma-separated list of transformation services to install (e.g. "map,jsonpath")
 transformation = map,javascript,regex
 
 # A comma-separated list of text-to-speech engines to install (e.g. "marytts,freetts")
-tts = marytts
+tts = mactts
 
 # A comma-separated list of miscellaneous services to install (e.g. "myopenhab")
-#misc = hueemulation,myopenhab
 misc = openhabcloud
