generierte Dateien herausnehmen

--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,30 @@
 
 /.cproject
 /.project
+
+
+
+###############
+eds.sql
+eds-structs.h
+frame_message_description.cc
+hcan-def.h
+hcan-protocol-referenz.txt
+hcan_transport.cc
+hcan_transport.h
+oap-def.h
+
+firmwares/controllerboard/devices.c
+firmwares/controllerboard/devices.h
+firmwares/controllerboard/devices/devices.xml
+firmwares/controllerboard/timer.c
+
+check_hcan/check_hcan
+hcan4mqttpc/hcan4mqttpc
+hcanaddressd/hcanaddressd
+hcand/hcand
+hcandq/hcandq
+hcansocketd/hcansocketd
+hcanswd/hcanswd
+telican/telican
+tools/hcanextid/hcanextid
