Hilfstool hcan-protocol eingefügt über den Befehl "hcan-protocol 5 41" bekommt man z.B. die Messagebeschreinung der Messager 41 im Service 5 (HES) Für weitere Infos einfach ohne Parameter aufrufen

--- a/tools/Makefile
+++ b/tools/Makefile
@@ -1,6 +1,6 @@
 include ../ARCH.inc
 
-TARGET = hcan-backup-config hcan-discover hcan-restore-config
+TARGET = hcan-backup-config hcan-discover hcan-restore-config hcan-protocol
 
 .PHONY: all install
 
