--- a/hcanhab2_mqtt/MakefileDefines.inc
+++ b/hcanhab2_mqtt/MakefileDefines.inc
@@ -2,7 +2,8 @@ CONF = /home/il/Dropbox/HCAN/HI_SERVER/openhab2_conf_mqtt
 include $(CONF)/myconf.inc
 
 #OPENHABVERSION = openhab-2.4.0
-OPENHABVERSION = openhab-2.5.0.M3
+#OPENHABVERSION = openhab-2.5.0.M3
+OPENHABVERSION = openhab-2.5.0.M5
 HCAN_INSTALLATION = installation.xml
 
 
