--- a/firmwares/controllerboard/Makefile
+++ b/firmwares/controllerboard/Makefile
@@ -43,7 +43,7 @@ $(TARGET).hex: $(TARGET).elf
 	$(OBJCOPY) -R .eeprom -O ihex $(TARGET).elf $(TARGET).hex 
 	avr-size $(TARGET).hex
 
-$(TARGET).elf:
+$(TARGET).elf: $(SRC)
 	$(CXX) $(CFLAGS) -o $(TARGET).elf $(SRC) -Wl,-Map,$(TARGET).map
 
 clean_part:
