telican: Option "--resolve" eingebaut Gruppen und Board IDs werden ueber die installation.xml aufloesen und im Klartext dargestellt
	geändert:       hcandq/main.cc
	geändert:       libhcan++/Makefile
	geändert:       libhcan++/frame.cc
	geändert:       libhcan++/frame.h
	geändert:       libhcan++/transport_connection.cc
	geändert:       libhcan++/transport_connection.h
	geändert:       telican/installation_data.cc
	geändert:       telican/installation_data.h
	geändert:       telican/main.cc

--- a/libhcan++/Makefile
+++ b/libhcan++/Makefile
@@ -4,6 +4,7 @@ TARGET = libhcan++
 
 SRC = $(patsubst %.cc, %.cc , $(wildcard *.cc))
 OBJ = $(patsubst %.cc,%.o,$(wildcard *.cc))
+OBJ += ../telican/installation_data.o
 
 CXX = g++ #-m32
 CXXFLAGS = -Wall
@@ -33,5 +34,4 @@ clean:
 	rm -f $(TARGET).* *.o 
 
 doc:
-	doxygen    
-      
+	doxygen
